--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ td {
  <div class="title_Bar">
     <table width="100%" height="300">
         <tbody><tr>
-            <td class="title_Txt">국회 국토교통위원회 법안소위<br>18명의 국회의원들에게 <br>
+            <td class="title_Txt">테스트용_국회 국토교통위원회 법안소위<br>18명의 국회의원들에게 <br>
           보증금 채권 공공매입 포함한 <br>전세사기·깡통전세 특별법 제정촉구 문자보내기</td>
             <td align="right"></td>
         </tr>
@@ -102,7 +102,7 @@ td {
    <tr>
    <td align="center" colspan="3" width="100%">
     <h2><br />
-         <a onclick="var message='입주전 사기, 보증금탈취도 피해자로 인정하라. 보증금 제한말고 피해자로 인정하라.';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01065798085&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 1번으로 문자 보내기</a>
+         <a onclick="var message='입주전 사기, 보증금탈취도 피해자로 인정하라. 보증금 제한말고 피해자로 인정하라.';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 1번으로 문자 보내기</a>
     <br />&nbsp;
               </h2></td>
    
@@ -110,7 +110,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="#ffcc00">
     <h2><br />
-       <a onclick="var message='수사를 안 해주는데 피해자가 어떻게 하나? 수사개시 요건 없애라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01065798085&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 2번으로 문자 보내기</a>
+       <a onclick="var message='수사를 안 해주는데 피해자가 어떻게 하나? 수사개시 요건 없애라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 2번으로 문자 보내기</a>
     <br />&nbsp;
         </h2></td>
    
@@ -118,7 +118,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="ffaa00">
     <h2><br />
-     <a onclick="var message='최소한 최우선변제금만큼의 보증금 회수방안 마련하라';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01065798085&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 3번으로 문자 보내기</a>
+     <a onclick="var message='최소한 최우선변제금만큼의 보증금 회수방안 마련하라';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 3번으로 문자 보내기</a>
       <br />&nbsp;
      </h2></td>
    
@@ -126,7 +126,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="#ffcc00">
     <h2><br />
-       <a onclick="var message='전세사기도 억울한데 신불자 될 수 없다. 채무조정시 추가대출, 신용카드 발급등에서 불이익 금지하라.';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01065798085' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01065798085&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 4번으로 문자 보내기</a>
+       <a onclick="var message='전세사기도 억울한데 신불자 될 수 없다. 채무조정시 추가대출, 신용카드 발급등에서 불이익 금지하라.';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 4번으로 문자 보내기</a>
     <br />&nbsp;
         </h2></td>
    
@@ -134,7 +134,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="ffaa00">
     <h2><br />
-<a onclick="var message='수천수만의 피해자가 지켜보고 있다. 세입자 국민 피해회복 없이 국회는 국민을 대표할 자격없다!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01065798085' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01065798085&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 5번으로 문자 보내기</a>
+<a onclick="var message='수천수만의 피해자가 지켜보고 있다. 세입자 국민 피해회복 없이 국회는 국민을 대표할 자격없다!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 5번으로 문자 보내기</a>
       <br />&nbsp;
      </h2></td>
    
