--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <head>
 <meta charset="utf-8">
-<title>테스트용_제대로 된 전세사기·깡통전세 특별법 개정안 촉구 긴급 문자행동</title>
+<title>전세사기특별법 개정안 본회의 회부 촉구 긴급 문자행동</title>
 </head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"> 
@@ -63,8 +63,8 @@ td {
  <div class="title_Bar">
     <table width="100%" height="300">
         <tbody><tr>
-            <td class="title_Txt">테스트용_국회 국토교통위원회 법안소위<br>18명의 국회의원들에게 <br>
-          보증금 채권 공공매입 포함한 <br>전세사기·깡통전세 특별법 제정촉구 문자보내기</td>
+            <td class="title_Txt">국회 국토교통위원회<br>18명의 국회의원들에게 <br>
+          전세사기 피해자 살리는<br>전세사기특별법 본회의 회부 촉구 문자보내기</td>
             <td align="right"></td>
         </tr>
   <tr>
@@ -82,18 +82,17 @@ td {
         </tr>
   <tr>
    <td height="300" colspan="2" align="center">
-    <h2 style="line-height: 35px; font-weight : 700">오늘 전세사기 특별법을 논의하는 
-사실상 마지막 국토위 법안소위가 열립니다.<br>
+    <h2 style="line-height: 35px; font-weight : 700">다가오는 2월 29일, 
+국회 본회의가 예정되어 있습니다. 사실상 총선 전 전세사기특별법 개정안을 통과시킬 마지막 기회입니다.<br>
 <br>
-사각지대 양산하는 정부 여당 특별법 반대합니다.<br>
-피해자 요구가 반영된 제대로 된 특별법 제정을 위해,<br>
-법안소위 의원들에게 문자를 보냅시다!<br>
-오늘 하루, 아래 버튼으로 12명의 의원들에게 12번 이상 문자를 보내주세요!<br><br><br></h2><h2 align="left">문구 예시)<br><br>
-1. 입주전 사기, 보증금탈취도 피해자로 인정하라. 보증금 제한말고 피해자로 인정하라.<br><br>
-2. 수사를 안 해주는데 피해자가 어떻게 하나? 수사개시 요건 없애라!<br><br>
-3. 최소한 최우선변제금만큼의 보증금 회수방안 마련하라<br><br>
-4. 전세사기도 억울한데 신불자 될 수 없다. 채무조정시 추가대출, 신용카드 발급등에서 불이익 금지하라.<br><br>
-5. 수천수만의 피해자가 지켜보고 있다. 세입자 국민 피해회복 없이 국회는 국민을 대표할 자격없다!<br><br>
+피해자 요구가 반영된 제대로 된 특별법 개정을 위해,<br>
+국회교통위원회 소속 의원들에게 문자를 보냅시다!<br>
+아래 버튼으로 18명의 의원들에게 18번 이상 문자를 보내주세요!<br><br><br></h2><h2 align="left">문구 예시)<br><br>
+1. 최소한 최우선변제금만큼의 보증금 회수할 수 있도록 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
+2. 경공매 재개가 시시각각 다가오는 가운데 피해자들은 4월까지 기다릴 수 없다. 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
+3. 수천수만의 피해자가 지켜보고 있다. 세입자 국민 피해회복 없이 국회는 국민을 대표할 자격없다! 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
+4. 전세사기도 억울한데 신불자 될 수 없다. 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br>
+5. 보증금도 돌려받지 못하고, 주택 관리도 방치되어 누수·화재 위험까지, 불안해서 못 살겠다. 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
     </h2></td>
   </tr>
     </tbody></table>
@@ -102,7 +101,7 @@ td {
    <tr>
    <td align="center" colspan="3" width="100%">
     <h2><br />
-         <a onclick="var message='입주전 사기, 보증금탈취도 피해자로 인정하라. 보증금 제한말고 피해자로 인정하라.';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 1번으로 문자 보내기</a>
+         <a onclick="var message='최소한 최우선변제금만큼의 보증금 회수할 수 있도록!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 회부하라">예시문구 1번으로 문자 보내기</a>
     <br />&nbsp;
               </h2></td>
    
@@ -110,7 +109,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="#ffcc00">
     <h2><br />
-       <a onclick="var message='수사를 안 해주는데 피해자가 어떻게 하나? 수사개시 요건 없애라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 2번으로 문자 보내기</a>
+       <a onclick="var message='경공매 재개가 시시각각 다가오는 가운데 피해자들은 4월까지 기다릴 수 없다.';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 회부하라">예시문구 2번으로 문자 보내기</a>
     <br />&nbsp;
         </h2></td>
    
@@ -118,7 +117,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="ffaa00">
     <h2><br />
-     <a onclick="var message='최소한 최우선변제금만큼의 보증금 회수방안 마련하라';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 3번으로 문자 보내기</a>
+     <a onclick="var message='수천수만의 피해자가 지켜보고 있다. 세입자 국민 피해회복 없이 국회는 국민을 대표할 자격없다!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 회부하라">예시문구 3번으로 문자 보내기</a>
       <br />&nbsp;
      </h2></td>
    
@@ -126,7 +125,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="#ffcc00">
     <h2><br />
-       <a onclick="var message='전세사기도 억울한데 신불자 될 수 없다. 채무조정시 추가대출, 신용카드 발급등에서 불이익 금지하라.';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 4번으로 문자 보내기</a>
+       <a onclick="var message='전세사기도 억울한데 신불자 될 수 없다. 채무조정시 추가대출, 신용카드 발급등에서 불이익 금지하라.';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 회부하라">예시문구 4번으로 문자 보내기</a>
     <br />&nbsp;
         </h2></td>
    
@@ -134,7 +133,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="ffaa00">
     <h2><br />
-<a onclick="var message='수천수만의 피해자가 지켜보고 있다. 세입자 국민 피해회복 없이 국회는 국민을 대표할 자격없다!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=전세사기는 사회적 재난이다! 보증금 채권매입 포함한 특별법 제정!">예시문구 5번으로 문자 보내기</a>
+<a onclick="var message='보증금도 돌려받지 못하고, 주택 관리도 방치되어 누수·화재 위험까지, 불안해서 못 살겠다.' ;var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 회부하라">예시문구 5번으로 문자 보내기</a>
       <br />&nbsp;
      </h2></td>
    
