--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ td {
 1. 최소한 최우선변제금만큼의 보증금 회수할 수 있도록 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
 2. 경공매 재개가 시시각각 다가오는 가운데 피해자들은 4월까지 기다릴 수 없다. 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
 3. 수천수만의 피해자가 지켜보고 있다. 세입자 국민 피해회복 없이 국회는 국민을 대표할 자격없다! 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
-4. 전세사기도 억울한데 신불자 될 수 없다. 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br>
+4. 전세사기도 억울한데 신불자 될 수 없다. 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
 5. 보증금도 돌려받지 못하고, 주택 관리도 방치되어 누수·화재 위험까지, 불안해서 못 살겠다. 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
     </h2></td>
   </tr>
