--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ td {
  <div class="title_Bar">
     <table width="100%" height="300">
         <tbody><tr>
-            <td class="title_Txt">국회 국토교통위원회<br>18명의 국회의원들에게 <br>
-          전세사기 피해자 살리는<br>전세사기특별법 본회의 회부 촉구 문자보내기</td>
+            <td class="title_Txt">국회 국토교통위원회 18명의 국회의원들에게 <br>
+          전세사기 피해자 살리는<br>전세사기특별법 개정안 본회의 회부 촉구 문자보내기</td>
             <td align="right"></td>
         </tr>
   <tr>
@@ -85,7 +85,7 @@ td {
     <h2 style="line-height: 35px; font-weight : 700">다가오는 2월 29일, 
 국회 본회의가 예정되어 있습니다. 사실상 총선 전 전세사기특별법 개정안을 통과시킬 마지막 기회입니다.<br>
 <br>
-피해자 요구가 반영된 제대로 된 특별법 개정을 위해,<br>
+피해자 요구가 조금이나마 반영된 특별법 개정을 위해,<br>
 국회교통위원회 소속 의원들에게 문자를 보냅시다!<br>
 아래 버튼으로 18명의 의원들에게 18번 이상 문자를 보내주세요!<br><br><br></h2><h2 align="left">문구 예시)<br><br>
 1. 최소한 최우선변제금만큼의 보증금 회수할 수 있도록 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
