--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ td {
  <div class="title_Bar">
     <table width="100%" height="300">
         <tbody><tr>
-            <td class="title_Txt">국회 국토교통위원회 18명의 국회의원들에게 <br>
-          전세사기 피해자 살리는<br>전세사기특별법 개정안 본회의 회부 촉구 문자보내기</td>
+            <td class="title_Txt">피해자에게 진정 도움이 되는 '전세사기특별법' 개정안의 조속한 처리를 촉구하는<br>
+          <국회 국토위 의원에게 단체문자 보내기 캠페인></td>
             <td align="right"></td>
         </tr>
   <tr>
