--- a/index.html
+++ b/index.html
@@ -82,17 +82,16 @@ td {
         </tr>
   <tr>
    <td height="300" colspan="2" align="center">
-    <h2 style="line-height: 35px; font-weight : 700">다가오는 2월 29일, 
-국회 본회의가 예정되어 있습니다. 사실상 총선 전 전세사기특별법 개정안을 통과시킬 마지막 기회입니다.<br>
+    <h2 style="line-height: 35px; font-weight : 700">전세사기특별법 개정안이 지난 12월 27일 국토위 전체회의를 통과했으나, 지난 60일 동안 법사위에서 단 한 차례도 논의되지 않았습니다. 국회법(제86조 3항)에 따라 2월 25일부터 국토위에서 재적위원 5분의 3 이상의 찬성으로 본회의 부의 요구가 가능해졌습니다. 내일 국토위 전체회의가 열릴 예정이라고 합니다..<br>
 <br>
-피해자 요구가 조금이나마 반영된 특별법 개정을 위해,<br>
-국회교통위원회 소속 의원들에게 문자를 보냅시다!<br>
-아래 버튼으로 18명의 의원들에게 18번 이상 문자를 보내주세요!<br><br><br></h2><h2 align="left">문구 예시)<br><br>
-1. 최소한 최우선변제금만큼의 보증금 회수할 수 있도록 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
-2. 경공매 재개가 시시각각 다가오는 가운데 피해자들은 4월까지 기다릴 수 없다. 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
-3. 수천수만의 피해자가 지켜보고 있다. 세입자 국민 피해회복 없이 국회는 국민을 대표할 자격없다! 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
-4. 전세사기도 억울한데 신불자 될 수 없다. 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
-5. 보증금도 돌려받지 못하고, 주택 관리도 방치되어 누수·화재 위험까지, 불안해서 못 살겠다. 지금 당장 전세사기특별법 개정안을 본회의로 회부하라!<br><br>
+전세사기특별법 개정안이 국회 본회의에 회부되어 통과될 수 있도록 국회 법안소위 의원들에게 문자를 보내주세요!<br>
+<br>
+오늘, 내일 아래 버튼을 눌러서 국회의원들에게 우리의 요구를 문자로 보내주세요<br><br><br></h2><h2 align="left">문구 예시)<br><br>
+1. 하루빨리 국토위 열어서 특별법 개정안 본회의에 부의하라!<br><br>
+2. 전세사기 피해자 요구 반대하는 국회의원, 총선 때 두고보자!!!<br><br>
+3. 경공매 재개가 시작됩니다. 더이상 기다릴 수 없습니다. 지금 당장 특별법 개정안 본회의 부의하라!<br><br>
+4. 최우선변제금도 못받는 피해자가 대다수. 전세사기 특별법 개정이 민생이다! 개정안, 본회의 부의하라!<br><br>
+5. 2월 28일은 전세사기 희생자 1주기. 1주기 전 특별법 개정안 본회의 부의하라!<br><br>
     </h2></td>
   </tr>
     </tbody></table>
@@ -101,7 +100,7 @@ td {
    <tr>
    <td align="center" colspan="3" width="100%">
     <h2><br />
-         <a onclick="var message='최소한 최우선변제금만큼의 보증금 회수할 수 있도록!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 회부하라">예시문구 1번으로 문자 보내기</a>
+         <a onclick="var message='하루빨리 국토위 열어서 특별법 개정안 본회의에 부의하라! ';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702,01099181720&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 1번으로 문자 보내기</a>
     <br />&nbsp;
               </h2></td>
    
@@ -109,7 +108,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="#ffcc00">
     <h2><br />
-       <a onclick="var message='경공매 재개가 시시각각 다가오는 가운데 피해자들은 4월까지 기다릴 수 없다.';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 회부하라">예시문구 2번으로 문자 보내기</a>
+       <a onclick="var message='전세사기 피해자 요구 반대하는 국회의원, 총선 때 두고보자!!!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702,01099181720&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 2번으로 문자 보내기</a>
     <br />&nbsp;
         </h2></td>
    
@@ -117,7 +116,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="ffaa00">
     <h2><br />
-     <a onclick="var message='수천수만의 피해자가 지켜보고 있다. 세입자 국민 피해회복 없이 국회는 국민을 대표할 자격없다!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 회부하라">예시문구 3번으로 문자 보내기</a>
+     <a onclick="var message='경공매 재개가 시작됩니다. 더이상 기다릴 수 없습니다. 지금 당장 특별법 개정안 본회의 부의하라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702,01099181720&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 3번으로 문자 보내기</a>
       <br />&nbsp;
      </h2></td>
    
@@ -125,7 +124,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="#ffcc00">
     <h2><br />
-       <a onclick="var message='전세사기도 억울한데 신불자 될 수 없다. 채무조정시 추가대출, 신용카드 발급등에서 불이익 금지하라.';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 회부하라">예시문구 4번으로 문자 보내기</a>
+       <a onclick="var message='최우선변제금도 못받는 피해자가 대다수. 전세사기 특별법 개정이 민생이다! 개정안, 본회의 부의하라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702,01099181720&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 4번으로 문자 보내기</a>
     <br />&nbsp;
         </h2></td>
    
@@ -133,7 +132,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="ffaa00">
     <h2><br />
-<a onclick="var message='보증금도 돌려받지 못하고, 주택 관리도 방치되어 누수·화재 위험까지, 불안해서 못 살겠다.' ;var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 회부하라">예시문구 5번으로 문자 보내기</a>
+<a onclick="var message='2월 28일은 전세사기 희생자 1주기. 1주기 전 특별법 개정안 본회의 부의하라!' ;var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702,01099181720&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 5번으로 문자 보내기</a>
       <br />&nbsp;
      </h2></td>
    
