--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <head>
 <meta charset="utf-8">
-<title>전세사기특별법 개정안 본회의 회부 촉구 긴급 문자행동</title>
+<title>전세사기특별법 개정안 본회의 부의 촉구 긴급 문자행동</title>
 </head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"> 
