--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ td {
         </tr>
   <tr>
    <td height="300" colspan="2" align="center">
-    <h2 style="line-height: 35px; font-weight : 700">전세사기특별법 개정안이 지난 12월 27일 국토위 전체회의를 통과했으나, 지난 60일 동안 법사위에서 단 한 차례도 논의되지 않았습니다. 국회법(제86조 3항)에 따라 2월 25일부터 국토위에서 재적위원 5분의 3 이상의 찬성으로 본회의 부의 요구가 가능해졌습니다. 내일 국토위 전체회의가 열릴 예정이라고 합니다.<br>
+    <h2 style="line-height: 35px; font-weight : 700">전세사기특별법 개정안이 지난 12월 27일 국토위 전체회의를 통과했으나, 지난 60일 동안 법사위에서 단 한 차례도 논의되지 않았습니다.<br>국회법(제86조 3항)에 따라 2월 25일부터 국토위에서 재적위원 5분의 3 이상의 찬성으로 본회의 부의 요구가 가능해졌습니다. 내일 국토위 전체회의가 열릴 예정이라고 합니다.<br>
 <br>
 전세사기특별법 개정안이 국회 본회의에 회부되어 통과될 수 있도록 국회 법안소위 의원들에게 문자를 보내주세요!<br>
 <br>
@@ -100,7 +100,7 @@ td {
    <tr>
    <td align="center" colspan="3" width="100%">
     <h2><br />
-         <a onclick="var message='하루빨리 국토위 열어서 특별법 개정안 본회의에 부의하라! ';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702, 01099181720, 01089597918' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702, 01099181720, 01089597918&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 1번으로 문자 보내기</a>
+         <a onclick="var message='하루빨리 국토위 열어서 특별법 개정안 본회의에 부의하라! ';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869,  01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01065798085, 01045312394' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869,  01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01065798085, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 1번으로 문자 보내기</a>
     <br />&nbsp;
               </h2></td>
    
@@ -108,7 +108,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="#ffcc00">
     <h2><br />
-       <a onclick="var message='전세사기 피해자 요구 반대하는 국회의원, 총선 때 두고보자!!!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702, 01099181720, 01089597918' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702, 01099181720, 01089597918&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 2번으로 문자 보내기</a>
+       <a onclick="var message='전세사기 피해자 요구 반대하는 국회의원, 총선 때 두고보자!!!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869,  01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01065798085, 01045312394' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869,  01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01065798085, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 2번으로 문자 보내기</a>
     <br />&nbsp;
         </h2></td>
    
@@ -116,7 +116,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="ffaa00">
     <h2><br />
-     <a onclick="var message='경공매 재개가 시작됩니다. 더이상 기다릴 수 없습니다. 지금 당장 특별법 개정안 본회의 부의하라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702, 01099181720, 01089597918' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702, 01099181720, 010895979180&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 3번으로 문자 보내기</a>
+     <a onclick="var message='경공매 재개가 시작됩니다. 더이상 기다릴 수 없습니다. 지금 당장 특별법 개정안 본회의 부의하라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869,  01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01065798085, 01045312394' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869,  01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01065798085, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 3번으로 문자 보내기</a>
       <br />&nbsp;
      </h2></td>
    
@@ -124,7 +124,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="#ffcc00">
     <h2><br />
-       <a onclick="var message='최우선변제금도 못받는 피해자가 대다수. 전세사기 특별법 개정이 민생이다! 개정안, 본회의 부의하라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702, 01099181720, 01089597918' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702, 01099181720, 010895979180&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 4번으로 문자 보내기</a>
+       <a onclick="var message='최우선변제금도 못받는 피해자가 대다수. 전세사기 특별법 개정이 민생이다! 개정안, 본회의 부의하라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869,  01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01065798085, 01045312394' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869,  01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01065798085, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 4번으로 문자 보내기</a>
     <br />&nbsp;
         </h2></td>
    
@@ -132,7 +132,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="ffaa00">
     <h2><br />
-<a onclick="var message='2월 28일은 전세사기 희생자 1주기. 1주기 전 특별법 개정안 본회의 부의하라!' ;var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024605702, 01099181720, 01089597918' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024605702, 01099181720, 01089597918&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 5번으로 문자 보내기</a>
+<a onclick="var message='2월 28일은 전세사기 희생자 1주기. 1주기 전 특별법 개정안 본회의 부의하라!' ;var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869,  01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01065798085, 01045312394' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869,  01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01090287979, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01065798085, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 5번으로 문자 보내기</a>
       <br />&nbsp;
      </h2></td>
    
