--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ td {
    <td height="300" colspan="2" align="center">
     <h2 style="line-height: 35px; font-weight : 700">전세사기특별법 개정안이 지난 12월 27일 국토위 전체회의를 통과했으나, 지난 60일 동안 법사위에서 단 한 차례도 논의되지 않았습니다.<br>국회법(제86조 3항)에 따라 2월 25일부터 국토위에서 재적위원 5분의 3 이상의 찬성으로 본회의 부의 요구가 가능해졌습니다. <br>내일 국토위 전체회의가 열릴 예정이라고 합니다.<br>
 <br>
-전세사기특별법 개정안이 국회 본회의에 회부되어 통과될 수 있도록 국회 법안소위 의원들에게 문자를 보내주세요!<br>
+전세사기특별법 개정안이 국회 본회의에 회부되어 통과될 수 있도록 국회 국토교통위원회 의원들에게 문자를 보내주세요!<br>
 <br>
 오늘, 내일 아래 버튼을 눌러서 국회의원들에게 우리의 요구를 문자로 보내주세요<br><br><br></h2><h2 align="left">문구 예시)<br><br>
 1. 하루빨리 국토위 열어서 특별법 개정안 본회의에 부의하라!<br><br>
