--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <head>
 <meta charset="utf-8">
-<title>전세사기특별법 개정안 본회의 부의 촉구 긴급 문자행동</title>
+<title>전세사기특별법 개정안 피해자 요구 반영 촉구 긴급 문자행동</title>
 </head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"> 
@@ -63,7 +63,7 @@ td {
  <div class="title_Bar">
     <table width="100%" height="300">
         <tbody><tr>
-            <td class="title_Txt">피해자에게 진정 도움이 되는 '전세사기특별법' 개정안의 조속한 처리를 촉구하는<br>
+            <td class="title_Txt">최소보장 등 피해자 요구사항을 포함한 '전세사기특별법' 개정안의 조속한 처리를 촉구하는<br>
           <국회 국토위 의원에게 단체문자 보내기 캠페인></td>
             <td align="right"></td>
         </tr>
@@ -82,16 +82,16 @@ td {
         </tr>
   <tr>
    <td height="300" colspan="2" align="center">
-    <h2 style="line-height: 35px; font-weight : 700">전세사기특별법 개정안이 지난 12월 27일 국토위 전체회의를 통과했으나, 지난 60일 동안 법사위에서 단 한 차례도 논의되지 않았습니다.<br>국회법(제86조 3항)에 따라 2월 25일부터 국토위에서 재적위원 5분의 3 이상의 찬성으로 본회의 부의 요구가 가능해졌습니다. <br>내일 국토위 전체회의가 열릴 예정이라고 합니다.<br>
+    <h2 style="line-height: 35px; font-weight : 700">전세사기특별법 개정안을 두고 국토위 법안심사소위(8/20), 전체회의(8/21)에서 논의가 이뤄질 예정이라고 합니다.<br>여야 협의를 거쳐 국회 본회의(8/28)로 넘어가면 통과될 가능성이 높습니다.<br>이 과정에서 피해자들이 요구하는 내용이 충분히 반영되지 못하고 반쪽짜리 개정이 되지는 않을까 우려가 높습니다.<br>
 <br>
-전세사기특별법 개정안이 국회 본회의에 회부되어 통과될 수 있도록 국회 국토교통위원회 의원들에게 문자를 보내주세요!<br>
+사각지대 없는 전세사기특별법 개정안이 통과될 수 있도록 국회 국토교통위원회 의원들에게 문자를 보내주세요!<br>
 <br>
-오늘, 내일 아래 버튼을 눌러서 국회의원들에게 우리의 요구를 문자로 보내주세요<br><br><br></h2><h2 align="left">문구 예시)<br><br>
-1. 하루빨리 국토위 열어서 특별법 개정안 본회의에 부의하라!<br><br>
-2. 전세사기 피해자 요구 반대하는 국회의원, 총선 때 두고보자!!!<br><br>
-3. 경공매 재개가 시작됩니다. 더이상 기다릴 수 없습니다. 지금 당장 특별법 개정안 본회의 부의하라!<br><br>
-4. 최우선변제금도 못받는 피해자가 대다수. 전세사기 특별법 개정이 민생이다! 개정안, 본회의 부의하라!<br><br>
-5. 2월 28일은 전세사기 희생자 1주기. 1주기 전 특별법 개정안 본회의 부의하라!<br><br>
+오늘, 내일 아래 버튼을 눌러서 국회의원들에게 우리의 요구를 문자로 보내주세요<br><br><br></h2><h2 align="left">문구)<br><br>
+1. (최소보장) 경매차익 없는 피해자 위한 최소보장 방안 특별법에 포함하라!<br><br>
+2. (소급적용) 특별법 개정안 소급적용 방안 마련하라!<br><br>
+3. (외국인 등 사각지대 피해자 지원) 외국인 피해자 및 사각지대 피해자 포함한 특별법으로 개정하라!<br><br>
+4. (다가구주택 매입 요건 완화) 다가구주택 매입요건 피해자 과반수 동의로 완화하라!<br><br>
+5. (다세대 공동담보 지원) 다세대 공동담보 건물 통매입 및 추가 안분배당 방안 마련하라!<br><br>
     </h2></td>
   </tr>
     </tbody></table>
@@ -100,7 +100,7 @@ td {
    <tr>
    <td align="center" colspan="3" width="100%">
     <h2><br />
-         <a onclick="var message='하루빨리 국토위 열어서 특별법 개정안 본회의에 부의하라! ';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 1번으로 문자 보내기</a>
+         <a onclick="var message='경매차익 없는 피해자 위한 최소보장 방안 특별법에 포함하라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01057976519, 01037144990, 01037956899, 01053106742, 01064046212, 01054054478, 01089057300, 01045887111, 01035711000, 01052131397, 01054010630, 01052460638, 01076242050, 01071701067, 01047310307, 01045669331, 01086105793, 01071101941, 01091769383, 01053800400, 01089001351, 01024843136, 01073967689, 01094192667, 01045312394, 01063418369, 01062516937, 01087853037, 01063927112, 01038570814' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 1번으로 문자 보내기</a>
     <br />&nbsp;
               </h2></td>
    
@@ -108,7 +108,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="#ffcc00">
     <h2><br />
-       <a onclick="var message='전세사기 피해자 요구 반대하는 국회의원, 총선 때 두고보자!!!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 2번으로 문자 보내기</a>
+       <a onclick="var message='특별법 개정안 소급적용 방안 마련하라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01057976519, 01037144990, 01037956899, 01053106742, 01064046212, 01054054478, 01089057300, 01045887111, 01035711000, 01052131397, 01054010630, 01052460638, 01076242050, 01071701067, 01047310307, 01045669331, 01086105793, 01071101941, 01091769383, 01053800400, 01089001351, 01024843136, 01073967689, 01094192667, 01045312394, 01063418369, 01062516937, 01087853037, 01063927112, 01038570814' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 2번으로 문자 보내기</a>
     <br />&nbsp;
         </h2></td>
    
@@ -116,7 +116,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="ffaa00">
     <h2><br />
-     <a onclick="var message='경공매 재개가 시작됩니다. 더이상 기다릴 수 없습니다. 지금 당장 특별법 개정안 본회의 부의하라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 3번으로 문자 보내기</a>
+     <a onclick="var message='외국인 피해자 및 사각지대 피해자 포함한 특별법으로 개정하라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01057976519, 01037144990, 01037956899, 01053106742, 01064046212, 01054054478, 01089057300, 01045887111, 01035711000, 01052131397, 01054010630, 01052460638, 01076242050, 01071701067, 01047310307, 01045669331, 01086105793, 01071101941, 01091769383, 01053800400, 01089001351, 01024843136, 01073967689, 01094192667, 01045312394, 01063418369, 01062516937, 01087853037, 01063927112, 01038570814' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 3번으로 문자 보내기</a>
       <br />&nbsp;
      </h2></td>
    
@@ -124,7 +124,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="#ffcc00">
     <h2><br />
-       <a onclick="var message='최우선변제금도 못받는 피해자가 대다수. 전세사기 특별법 개정이 민생이다! 개정안, 본회의 부의하라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 4번으로 문자 보내기</a>
+       <a onclick="var message='다가구주택 매입요건 피해자 과반수 동의로 완화하라!';var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01057976519, 01037144990, 01037956899, 01053106742, 01064046212, 01054054478, 01089057300, 01045887111, 01035711000, 01052131397, 01054010630, 01052460638, 01076242050, 01071701067, 01047310307, 01045669331, 01086105793, 01071101941, 01091769383, 01053800400, 01089001351, 01024843136, 01073967689, 01094192667, 01045312394, 01063418369, 01062516937, 01087853037, 01063927112, 01038570814' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 4번으로 문자 보내기</a>
     <br />&nbsp;
         </h2></td>
    
@@ -132,7 +132,7 @@ td {
    <tr>
    <td colspan="3" align="center" bgcolor="ffaa00">
     <h2><br />
-<a onclick="var message='2월 28일은 전세사기 희생자 1주기. 1주기 전 특별법 개정안 본회의 부의하라!' ;var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 5번으로 문자 보내기</a>
+<a onclick="var message='다세대 공동담보 건물 통매입 및 추가 안분배당 방안 마련하라!' ;var userAgent = navigator.userAgent.toLowerCase().indexOf('android') > -1;setAttribute('href', 'sms:' + (userAgent ? '' : '/open?addresses=') + '01057976519, 01037144990, 01037956899, 01053106742, 01064046212, 01054054478, 01089057300, 01045887111, 01035711000, 01052131397, 01054010630, 01052460638, 01076242050, 01071701067, 01047310307, 01045669331, 01086105793, 01071101941, 01091769383, 01053800400, 01089001351, 01024843136, 01073967689, 01094192667, 01045312394, 01063418369, 01062516937, 01087853037, 01063927112, 01038570814' + (userAgent ? '?' : '&amp;') + 'body=' + message.replace(/(\r\n)/g, '%0a'));" href="sms:/open?addresses=01024843136, 01023346622, 01087727345, 01094192667, 01088524045, 01031753022, 01035980875, 01058362869, 01026058080, 01088676160, 01093835379, 01068123000, 01088941307, 01057976519, 01045805440, 01046053847, 01094717754, 01025477929, 01064046212, 01076242050, 01071101941, 01097922392, 01084644578, 01088944966, 01052061620, 01063967765, 01045312394&amp;body=지금 당장 전세사기특별법 개정안을 본회의로 부의하라">예시문구 5번으로 문자 보내기</a>
       <br />&nbsp;
      </h2></td>
    
