--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ td {
         </tr>
   <tr>
    <td height="300" colspan="2" align="center">
-    <h2 style="line-height: 35px; font-weight : 700">전세사기특별법 개정안을 두고 국토위 법안심사소위(8/20), 전체회의(8/21)에서 논의가 이뤄질 예정이라고 합니다.<br>여야 협의를 거쳐 국회 본회의(8/28)로 넘어가면 통과될 가능성이 높습니다.<br>이 과정에서 피해자들이 요구하는 내용이 충분히 반영되지 못하고 반쪽짜리 개정이 되지는 않을까 우려가 높습니다.<br>
+    <h2 style="line-height: 35px; font-weight : 700">전세사기특별법 개정안을 두고 국토위 법안심사소위(8/20), 전체회의(8/21)에서 논의가 이뤄질 예정이라고 합니다.<br>여야 협의를 거쳐 국회 본회의(8/28)로 넘어가면 통과될 가능성이 높습니다.<br>이 과정에서 피해자들이 요구하는 내용이 충분히 반영되지 못하고 반쪽짜리 개정이 되지는 않을까 우려됩니다.<br>
 <br>
 사각지대 없는 전세사기특별법 개정안이 통과될 수 있도록 국회 국토교통위원회 의원들에게 문자를 보내주세요!<br>
 <br>
