--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ td {
     <table width="100%" height="300">
         <tbody><tr>
             <td class="title_Txt">조세원칙 실현, 금융과세 개혁!<br>
-          <금투세 시행 촉구를 위한 문자 캠페인인></td>
+          <금투세 시행 촉구를 위한 문자 캠페인></td>
             <td align="right"></td>
         </tr>
   <tr>
