--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@ td {
 더불어민주당이 예정대로 내년 금융투자소득세 시행을 당론으로 채택할 수 있도록 170명 의원 전원에게 문자를 보내주세요!<br>
 <br>
 10월 4일까지 아래 버튼을 눌러서 국회의원들에게 우리의 요구를 문자로 보내주세요<br><br><br></h2><h2 align="left">문구)<br><br>
-(금투세 시행 촉구 문자행동) 클릭 한 번으로 문자 보내기! <br><br>
+(금투세 시행 촉구 문자행동)
+더불어민주당은 유예없이 예정대로 금투세를 시행하라! 서민중산층 대변한다는 민주당이 금투세 폐지, 유예가 웬말이냐! 근로소득자, 자영업자, 알바생도 다 소득세 내는데 금융투자소득만 예외일 수 없다! 금투세 걷어서 민생 살리자! <br><br>
     </h2></td>
   </tr>
     </tbody></table>
